@@ -1,5 +1,8 @@
 version 1.9.3, in progress
 - New command "biprobit" (bivariate probit)
+- Add help text for "dpanel"
+- GUI graphs: allow option of replacing the original graph
+  with a zoomed view
 
 2010-11-03 version 1.9.2
 - New command "fractint" (fractional integration test)
